tests/typechecker/should_pass/recursive_eq2.csp
datatype X = K.Y
datatype Y = A.X
