tests/typechecker/should_fail/type_annotations_21.csp
Y :: Int => Event
datatype X = Y.Int

